--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --default-font-family: "Geist";
 }
 
 @layer base {
